expose dataset size via API
